@@ -3,6 +3,15 @@ NitrOS-9 V3.2.9:
 ----------------------------------------------------------
 2013/01/16 David Ladd
 M ChangeLog
+M makefile
+
+Updated main makefile so that "dw3" and "becker" sections
+use dependency "dsk" so that disk images are created before
+the archives are created.
+
+----------------------------------------------------------
+2013/01/16 David Ladd
+M ChangeLog
 M 3rdparty/packages/arcadepak/makefile
 M makefile
 
